fixed the contact button and its sibling text alignment

--- a/ckanext/justicehub_theme/public/jh_home_new1.css
+++ b/ckanext/justicehub_theme/public/jh_home_new1.css
@@ -16,7 +16,8 @@ a {
   color: var(--primary-color);
 }
 
-a:hover,  a:active {
+a:hover,
+a:active {
   color: var(--primary-color);
 }
 
@@ -869,7 +870,7 @@ footer h3 {
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   body {
     font-size: 14px;
   }
@@ -1108,6 +1109,25 @@ footer h3 {
   .item-addition > * {
     width: 100% !important;
   }
+}
+
+/* contact page */
+
+.contact-form ~ h1 {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.contact-form fieldset legend {
+  margin-left: -15px;
+  margin-right: -15px;
+  border-bottom: none;
+}
+
+.contact-form .form-actions {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 @media (max-width: 450px) {
@@ -1820,24 +1840,22 @@ footer h3 {
 }
 
 .fab {
-    position: fixed;
-    display: flex;
-    background-color: white;
-    justify-content: center;
-    align-items: center;
-    right: 2em;
-    bottom: 4em;
-    border-radius: 50%;
-    border: none;
-    width: 60px;
-    height: 60px;
-    z-index: 1;
-    box-shadow: 2px 3px 8px 2px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  display: flex;
+  background-color: white;
+  justify-content: center;
+  align-items: center;
+  right: 2em;
+  bottom: 4em;
+  border-radius: 50%;
+  border: none;
+  width: 60px;
+  height: 60px;
+  z-index: 1;
+  box-shadow: 2px 3px 8px 2px rgba(0, 0, 0, 0.1);
 }
 
 .feedback-logo {
-    width: 30px;
-    height: 30px;
+  width: 30px;
+  height: 30px;
 }
-
-
